# logrustate

./: .gitignore  Cargo.toml  README.md
src/: inotify.rs  logrotate.rs  main.rs
